[gd_scene load_steps=9 format=2]

[ext_resource path="res://BadGuy.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.94902, 0.196078, 0.196078, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=6]
radius = 1.01388
height = 1.00679

[sub_resource type="CapsuleShape" id=7]
radius = 1.04882

[node name="BadGuy" type="KinematicBody" groups=[
"Enemy",
]]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -0.20093, 0, 0.00159584, 0, 0.272261, 0, -0.00159584, 0, -0.20093, 0.339741, 0.888099, -0.822576 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance2"]
transform = Transform( 0.500647, 0, 0, 0, 0.500647, 0, 0, 0, 0.500647, 0.103974, 0, 0.57806 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.199043, -1.04621e-07, -0.0275274, -7.82478e-08, -0.272261, -2.16655e-09, -0.0275274, 1.74324e-08, -0.199043, -0.343304, 0.878863, -0.81498 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance3"]
transform = Transform( 0.500647, -2.34681e-20, -2.84217e-14, -1.27827e-20, 0.500647, 6.77626e-21, 2.84217e-14, 1.35525e-20, 0.500647, 0.103974, 0, 0.57806 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, -8.0376e-08, 3.51335e-15, 0, -4.37114e-08, -1, 8.0376e-08, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="PlayerDetection" type="Area" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="PlayerDetection"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 1.15238, 0.846044, 1.37838e-07 )
polygon = PoolVector2Array( 1, 6, 21, 11, 21, -12, 1, -6, -2, -3, -1.97983, -1.26834, 0, -1, 0, 1, -2, 1.346, -2, 3 )

[node name="CollisionPolygon2" type="CollisionPolygon" parent="PlayerDetection"]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, -1.91867, 0.846, -5.01801e-08 )
polygon = PoolVector2Array( 0.816, 1.973, -1, 3, -0.647, 0, -1, -3, 0.816018, -2.00861, 1, 0 )

[node name="ContactDetection" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ContactDetection"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 7 )
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="ContactDetection" to="." method="_on_ContactDetection_body_entered"]
